--- a/Node/package.json
+++ b/Node/package.json
@@ -8,8 +8,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^4.19.2"
-  }
+    "express": "^4.21.0"
+  },
+  "description": ""
 }
