--- a/Node/package.json
+++ b/Node/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "ws": "^8.18.0"
   },
   "description": ""
 }
