--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.4",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "ws": "^8.18.0"
   }
 }
